# external_zlib

./: .gitmodules  .travis.yml  CMakeLists.txt  Makefile-android_armeabi_gcc  Makefile-ios_i386_clang  Makefile-linux_armcortexa7_gcc  Makefile-linux_armv6rpi_gcc  Makefile-linux_i386_gcc  Makefile-windows_amd64_msvc  README.md  appveyor.yml  lookaside.txt
resources/: Makefile-linux_amd64_clang
resources/zlib_cmake/: CMakeLists.txt
test/: CMakeLists.txt  minizip_test.cpp  zlib_test.cpp
